--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "less": "^4.1.3",
+    "less-loader": "^7.3.0",
+    "vue": "^2.6.14",
+    "webpack": "^5.73.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
