--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "less": "^4.1.3",
     "less-loader": "^7.3.0",
     "vue": "^2.6.14",
+    "vue-router": "^3.5.4",
     "webpack": "^5.73.0"
   },
   "devDependencies": {
